--- a/package.json
+++ b/package.json
@@ -11,12 +11,50 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@isaacs/ttlcache": "^1.4.1",
+    "@mantine/core": "^7.11.1",
+    "@mantine/hooks": "^7.11.1",
+    "@mantine/notifications": "^7.11.1",
+    "@remix-run/eslint-config": "^2.9.2",
+    "@remix-run/express": "^2.9.2",
     "@remix-run/node": "^2.10.2",
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
+    "@tabler/icons-react": "^3.4.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/luxon": "^3.4.2",
+    "@types/pg": "^8.11.6",
+    "@types/react-table": "^7.7.20",
+    "@types/uuid": "^9.0.8",
+    "ag-grid-community": "^31.3.2",
+    "ag-grid-enterprise": "^31.3.2",
+    "ag-grid-react": "^31.3.2",
+    "cryptr": "^6.3.0",
+    "express": "^4.19.2",
+    "fast-fuzzy": "^1.12.0",
+    "ffprobe": "^1.1.2",
+    "framer-motion": "^11.2.13",
+    "image-size": "^1.1.1",
     "isbot": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
+    "pg": "^8.11.5",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-blurhash": "^0.3.0",
+    "react-bootstrap-icons": "^1.11.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-resize-detector": "^10.0.1",
+    "react-sortablejs": "^6.1.4",
+    "remark-breaks": "^4.0.0",
+    "tailwind-merge": "^2.3.0",
+    "uuid": "^9.0.1",
+    "vite-plugin-svgr": "^4.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.2",
